force-app/main/default/objects/Anonymization_Field__c/Anonymization_Field__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Anonymization Field</label>
</CustomObject>