force-app/main/default/objects/Anonymization_Field__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>