force-app/main/default/objects/Anonymization_Field__c/fields/Randomize__c.field-meta.xml
<CustomField>
    <fullName>Randomize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Randomize</label>
    <type>Checkbox</type>
</CustomField>