force-app/main/default/objects/Anonymization_Field__c/fields/Run_On_Production__c.field-meta.xml
<CustomField>
    <fullName>Run_On_Production__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run On Production</label>
    <type>Checkbox</type>
</CustomField>