force-app/main/default/objects/Anonymization_Field__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <label>sObject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>