force-app/main/default/objects/Anonymization_Field__c/fields/Truncate__c.field-meta.xml
<CustomField>
    <fullName>Truncate__c</fullName>
    <label>Truncate</label>
    <length>3</length>
    <type>Text</type>
</CustomField>